spec/invalid/eq_one_arg.expr.disassembled
[
    (
        CompileError(
            WrongNumberOfArgs {
                expected: 2,
                actual: 1,
            },
        ),
        0..9,
    ),
]